--- a/tenant_present.yaml
+++ b/tenant_present.yaml
@@ -1,10 +1,13 @@
 ---
-- name: Ensure tenant customer-xyz exists
-  aci_tenant:
-    host: 10.11.75.190
-    username: net_autom
-    password: Net_autom
+- hosts: all
+  become: true
+  tasks:
+    - name: Ensure tenant customer-xyz exists
+      aci_tenant:
+        host: 10.11.75.190
+        username: net_autom
+        password: Net_autom
 
-    tenant: Barfbag
-    description: Customer Barfbag
-    state: present
+        tenant: Barfbag
+        description: Customer Barfbag
+        state: present
